--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "CodeLens (Launch) - KonversiSuhu",
+      "request": "launch",
+      "mainClass": "com.tutorial.KonversiSuhu",
+      "projectName": "#01 - Pendahuluan"
+    },
+    {
+      "type": "java",
       "name": "CodeLens (Launch) - Main",
       "request": "launch",
       "mainClass": "com.tutorial.Main",
